force-app/main/default/force-app/main/default/objects/ARMT_ValidationReport__c/ARMT_ValidationReport__c.object-meta.xml
<CustomObject>
    <label>ARMT Validation Report</label>
    <pluralLabel>ARMT Validation Reports</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>VR-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores validation report records and summary information generated during pre-migration validation of CPQ configurations.</description>
</CustomObject>