force-app/main/default/force-app/main/default/objects/ARMT_ValidationReport__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report ID</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <description>Required text field storing the unique validation report identifier.</description>
</CustomField>