force-app/main/default/force-app/main/default/objects/ARMT_ValidationReport__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Long text field storing the validation summary generated during pre-migration validation.</description>
</CustomField>