force-app/main/default/force-app/main/default/objects/ARMT_ValidationReport__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BLOCKER</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Picklist field for report severity/status (BLOCKER, WARNING, INFO).</description>
</CustomField>